Tweaks to footer: - rename "The Volta Contributors" to "the Volta community" -- feels more warm and inclusive, defines Volta more as a community than as a recipient of donations - narrow the horizontal padding on mobile to avoid the :zap: spilling over - widen the vertical gap between footer sections (it was crowding)

--- a/theme/_sass/volta/_layout.scss
+++ b/theme/_sass/volta/_layout.scss
@@ -453,12 +453,15 @@ footer {
 
 @media (max-width: $media-mobile) {
   footer {
+    padding-left: 2rem;
+    padding-right: 2rem;
+
     .footer-contents {
       margin: 0;
       flex-direction: column;
 
       .community-container {
-        margin-bottom: 1rem;
+        margin-bottom: 3rem;
       }
 
       .community-container, .sponsor-container {
